# AIComposer

./: .dockerignore  .gitignore  .gitmodules  AI_COMPOSER_FLOW.md  AUTOPROVE.md  LICENSE  Makefile  README.md  auto_spec.py  autoprove.py  autoprove_common.py  cachetest.py  cex_analyzer.py  compose.py  console_autoprove.py  console_autoprove_properties.py  corpus_ingest.py  corpus_mutate.py  main.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  resume.py  tui_autoprove.py  tui_autoprove_properties.py  tui_main.py  tui_natspec.py  tui_pipeline.py
.github/workflows/: ci.yml  lockfile-check.yml  mypy.yml  pin-sync.yml  pyright.yml  pytest.yml  release.yml
analyzer/: __init__.py  __main__.py  analysis.py  types.py
analyzer/rag_data/: __init__.py  chroma.sqlite3
composer/: bind.py  certora_env.py
composer/assistant/: agent.py  codegen_launch.py  handler.py  launch_args.py  natspec_launch.py  post_mortem.py  tools.py  types.py
composer/audit/: db.py  sink.py  store.py  types.py
composer/cli/: ap_trail.py  ap_trail_export.py  ap_trail_ls.py  ap_trail_view.py  cache_autoprove.py  cache_natspec.py  compose.py  console_autoprove.py  console_autoprove_properties.py  console_codegen.py  console_foundry.py  live_autoprove.py  natspec_report.py  snapshot_viewer.py  tui_autoprove.py  tui_autoprove_properties.py  tui_codegen.py  tui_pipeline.py
composer/console/: app.py  io.py
composer/core/: context.py  io.py  state.py  user.py  validation.py
composer/corpus/: analysis.py  cloud_run.py  extraction.py  models.py  mutate.py  pipeline.py  preprocess.py  triage.py
composer/cvl/: pretty_print.py  schema.py  tools.py
composer/diagnostics/: debug.py  handlers.py  jsonl_sink.py  logging_setup.py  stream.py  timing.py  usage_callback.py
composer/foundry/: author.py  entry.py  env.py  noisy_handler.py  pipeline.py  runner.py  state.py  tools.py
composer/human/: handlers.py  types.py
composer/input/: config.py  files.py  models.py  parsing.py  types.py
composer/io/: DESIGN.md  autoprove_app.py  cache_explorer.py  codegen_events.py  codegen_rich.py  console.py  context.py  conversation.py  event_handler.py  events.py  graph_runner.py  ide_bridge.py  ide_content.py  message_renderer.py  mnemonic_store.py  multi_job.py  multi_job_app.py  natspec_rich.py  pipeline_app.py  prompt.py  protocol.py  rich_console.py  run_index.py  stream.py  thread_logging.py  thread_timeline.py  tool_display.py
composer/kb/: knowledge_base.py
composer/natreq/: automation.py  extractor.py  judge.py
composer/prover/: agentic_analyzer.py  analysis.py  cloud.py  (+6 more)
evaluation/: README.md
extension/: package-lock.json  package.json
rag_data/: chroma.sqlite3
sanity_analyzer/: README.md  __init__.py  analysis.py  types.py
scripts/: Dockerfile.autoprove  autoprove-entrypoint.sh  autoprove-setup.sh  autoprove_cache_explorer.py  bind.py  build_extended_manual.py  cache_explorer.py  check_submodule_pin.py  corpus_browser.py  debugConvo.py  docker-compose.yml  gen_docs.sh  gen_docs_extended.sh  gen_docs_zsh.sh  init-db.sql  kb_populate.py  kb_review.py  netrc_login.sh  populate_extended_rag.sh  populate_foundry_rag.sh  populate_rag.sh  rag_build_requirements.txt  rag_config_extended.json  ragbuild.py  ragbuild_chromadb.py  refresh_rag.sh  snapshot_viewer.py  specTraceDump.py  traceCommon.py  traceDump.py  traceExplorer.py  wipe_rag.py
test_inputs_multi_codegen/: README.md
tests/: conftest.py  test_agent_index.py  test_autoprove_report.py  test_config_edit.py  test_cvl_skips.py  test_harness_imports.py  test_harness_tape.py  test_indexed_tool.py  test_known_properties.py  test_rag_db.py  test_rule_skips.py  test_token_usage.py
vacuity_analyzer/: README.md  __init__.py  analysis.py  types.py
verisafe/: main.py
vscode-extension/: README.md  mockup.html  package-lock.json  package.json  tsconfig.json
(+410 files in other folders)
